# drf-realworld

./: .gitignore  manage.py  pyproject.toml
conduit/: asgi.py  settings.py  urls.py  wsgi.py
conduit/core/: managers.py  models.py
